--- a/reg_form.html
+++ b/reg_form.html
@@ -11,7 +11,7 @@
 <h3 align="center"> The tetris-like time management App</h3>
 <p>&nbsp;</p>
 <center>
-<form onsubmit="registerUser()">
+<form>
 <fieldset>
 <p class="legend" align="center" >Register Form</p>
 <p>
@@ -30,7 +30,7 @@
 <input type="text" name="password" required>
 </p>
 <p align="center" >
-<input type="submit" class="button" name="submit" value="SUBMIT" >
+<button type="button" class="button" name="submit" value="SUBMIT" onclick="registerUser()">SUBMIT</button>
 </p>
 </fieldset>
 </form>
