usunęłam znaczek plusa

--- a/timeboxy_main.html
+++ b/timeboxy_main.html
@@ -596,7 +596,7 @@
 <div style="margin-left: 40px">
 <p>
 <div class="empty">
-<div class="basefill" draggable="true">++ 30 min.++</div>
+<div class="basefill" draggable="true">+ 30 min.+</div>
 </div>
 </p>
 
