removing contemporary elements - eg. Alert Sukces from JS code, green border from TimeBrick; improving functionality of grid.

--- a/timeboxy_main.html
+++ b/timeboxy_main.html
@@ -593,14 +593,19 @@
    </table>
   <!------------************************ Koniec Godzin 00:00 ************************-------------->
 
+
+
 <div style="margin-left: 40px">
 <p>
+
+ <!------------------ START movable TimeBrick 30min  ------------------> 
 <div class="empty">
 <div class="basefill" draggable="true">+30 min.+</div>
+ <!------------------ END movable TimeBrick 30min ------------------> 
 </div>
 </p>
 
-<p>&nbsp;</p>
+<br><br>
 
 <h4>Write a task. Select it. Ready to put into TimeBoxy Planner</h4>
 
