clean HTML, remove unnecessery css, visual adjustments of timeboxy_main

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <p>&nbsp;</p>
 <center>
 <form action="https://evening-wave-26268.herokuapp.com/api/user/add " method="post">
-<fieldset>
-<!----<p class="legend" align="center" >LOGIN FORM</p>--->
+	
+<fieldset name="loginform">
 <p>
 <label name="user">USER:</label><br>
-<input type="text" name="user" ></p>
+<input type="text" name="user"></p>
 <p>
 <label name="user-password">PASSWORD:</label><br>
 <input type="text" name="user-password">
