--- a/timeboxy_main.html
+++ b/timeboxy_main.html
@@ -6,7 +6,7 @@
 <link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>			
+<body bgcolor="#CCCCCC">			
 <h1 align="center">TimeBoxy</h1>
 <table align="center" class="main-table" width="1188" cellpadding="0" cellspacing="0">
   <tr class="main-table">    
@@ -28,8 +28,8 @@
     <!-- tabela mon17 - do  klocków czasowych-->
     <table border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td class="inner-table" width="80"> <font><div class="empty" id="1_17_a" class="empty" >17:00-17:30</div></font></td>
-        <td class="inner-table" width="80"><font><div class="empty" id="1_17_b"  class="empty" >17:30-18:00</div></font></td>
+        <td class="inner-table" width="80"> <font><div class="empty" id="1_17_a" class="empty"></div></font></td>
+        <td class="inner-table" width="80"><font><div class="empty" id="1_17_b"  class="empty"></div></font></td>
       </tr>
     </table>
      <!-- koniec tabeli mon17 do klocków czasowych-->
@@ -110,8 +110,8 @@
   <!-- tabela mon18 - do  klocków czasowych-->
     <table border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td class="inner-table" width="80"> <font><div class="empty" id="1_18_a">18:00-18:30</div></font></td>
-        <td  class="inner-table" width="80"><font><div class="empty" id="1_18_b">18:30-19:00</div></font></td>
+        <td class="inner-table" width="80"> <font><div class="empty" id="1_18_a"></div></font></td>
+        <td  class="inner-table" width="80"><font><div class="empty" id="1_18_b"></div></font></td>
       </tr>
     </table>
      <!-- koniec tabeli mon18 do klocków czasowych-->
@@ -192,8 +192,8 @@
   <!-- tabela mon19 - do  klocków czasowych-->
     <table border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td class="inner-table" width="80"> <font><div class="empty" id="1_19_a">19:00-19:30</div></font></td>
-        <td  class="inner-table" width="80"><font><div class="empty" id="1_19_b">19:30-20:00</div></font></td>
+        <td class="inner-table" width="80"> <font><div class="empty" id="1_19_a"></div></font></td>
+        <td  class="inner-table" width="80"><font><div class="empty" id="1_19_b"></div></font></td>
       </tr>
     </table>
      <!-- koniec tabeli mon19 do klocków czasowych-->
@@ -273,8 +273,8 @@
     <!-- tabela mon20 - do  klocków czasowych-->
     <table border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td class="inner-table" width="80"> <font><div class="empty" id="1_20_a">20:00-20:30</div></font></td>
-        <td  class="inner-table" width="80"><font><div class="empty" id="1_20_b">20:30-21:00</div></font></td>
+        <td class="inner-table" width="80"> <font><div class="empty" id="1_20_a"></div></font></td>
+        <td  class="inner-table" width="80"><font><div class="empty" id="1_20_b"></div></font></td>
       </tr>
     </table>
      <!-- koniec tabeli mon20 do klocków czasowych-->
@@ -354,8 +354,8 @@
     <!-- tabela mon21 - do  klocków czasowych-->
     <table border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td class="inner-table" width="80"> <font><div class="empty" id="1_21_a">21:00-21:30</div></font></td>
-        <td  class="inner-table" width="80"><font><div class="empty" id="1_21_b">21:30-22:00</div></font></td>
+        <td class="inner-table" width="80"> <font><div class="empty" id="1_21_a"></div></font></td>
+        <td  class="inner-table" width="80"><font><div class="empty" id="1_21_b"></div></font></td>
       </tr>
     </table>
      <!-- koniec tabeli mon21 do klocków czasowych-->
@@ -435,8 +435,8 @@
     <!-- tabela mon22 - do  klocków czasowych-->
     <table border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td class="inner-table" width="80"> <font><div class="empty" id="1_22_a">22:00-22:30</div></font></td>
-        <td  class="inner-table" width="80"><font><div class="empty" id="1_22_b">22:30-23:00</div></font></td>
+        <td class="inner-table" width="80"> <font><div class="empty" id="1_22_a"></div></font></td>
+        <td  class="inner-table" width="80"><font><div class="empty" id="1_22_b"></div></font></td>
       </tr>
     </table>
      <!-- koniec tabeli mon22 do klocków czasowych-->
@@ -591,17 +591,19 @@
     </td>
   </tr>
    </table>
-  <!--************************ Koniec Godzin 00:00 ************************-->
+  <!--************************ END of Hours 00:00 ************************-->
 
 <br>
 <div style="margin-left: 40px">
 <p>
- <!------------------ START movable TimeBrick 30min  ------------------> 
+ <!------------------ START movable TimeBrick 30min 15 min  ------------------> 
 <div class="empty">
 <div class="basefill" draggable="true">30 min.</div><br>
-<div class="basefill15" draggable="true">15</div><br>
 </div>
- <!------------------ END movable TimeBrick 30min    ------------------> 
+<div class="empty">
+<div class="basefill15" draggable="true">15</div>
+</div>
+ <!------------------ END movable TimeBrick 30min 15 min  ------------------> 
 </p>
 
 <h4>Write a task. Select it. Ready to put into TimeBoxy Planner</h4>
