--- a/timeboxy_main.html
+++ b/timeboxy_main.html
@@ -6,7 +6,7 @@
 <link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
 
-<body bgcolor="#CCCCCC">			
+<body bgcolor="#CCCCCC" id="table">			
 <h1 align="center">TimeBoxy</h1>
 <table align="center" class="main-table" width="1188" cellpadding="0" cellspacing="0">
   <tr class="main-table">    
