--- a/timeboxy_main.html
+++ b/timeboxy_main.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-eqiv="X-UA-Compatible" content="ie=edge">
 <title>TimeBoxyPlanner Main Window</title>
 <link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
