improve consistency of filenames

--- a/timetable.html
+++ b/timetable.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-eqiv="X-UA-Compatible" content="ie=edge">
 <title>TimeBoxyPlanner Main Window</title>
-<link href="css/style_main.css" rel="stylesheet" type="text/css">
+<link href="css/timetable.css" rel="stylesheet" type="text/css">
 </head>
 
 <body bgcolor="#CCCCCC" id="table">			
