--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-eqiv="X-UA-Compatible" content="ie=edge">
 <title>TimeBoxy Welcome Login Page</title>
-<link href="css/style_index.css" rel="stylesheet" type="text/css">
+<link href="css/index.css" rel="stylesheet" type="text/css">
 </head>
 
 <body  bgcolor="#CCCCCC">			
