--- a/timetable.html
+++ b/timetable.html
@@ -637,8 +637,9 @@
   </tr>
 </table>
 </div>
-<p>
-</p>
+<div class="trash-delete"></div>
+<img class= "lid" src="images/lid.png">
+<img class= "trash" src="images/trash.png">
 <p>&nbsp;</p>
 <script src="js/timetable.js"></script>
 </body>
