lid position transform

--- a/timetable.html
+++ b/timetable.html
@@ -638,7 +638,8 @@
 </table>
 </div>
 <div class="trash-delete"></div>
-<img class= "lid" src="images/lid.png"><img class= "trash" src="images/trash.png">
+<img class= "lid" id="lid" src="images/lid.png">
+<img class= "trash" src="images/trash.png">
 
 <p>&nbsp;</p>
 <script src="js/timetable.js"></script>
