Delete timeBox - wip

--- a/timetable.html
+++ b/timetable.html
@@ -637,9 +637,10 @@
   </tr>
 </table>
 </div>
-<div class="trash-delete"></div>
+<div id="trash-delete"></div>
 <img class= "lid" id="lid" src="images/lid.png">
 <img class= "trash" src="images/trash.png">
+
 
 <p>&nbsp;</p>
 <script src="js/timetable.js"></script>
