minor change in tasks categories

--- a/timetable.html
+++ b/timetable.html
@@ -616,14 +616,14 @@
   <!-- Unit_01 Zaczyna się tutaj-->  
     <td width="217" height="56" bgcolor="#FF0000"><div class="unit_01">
    <input name="tasks" type="radio" id="task_for_box_01" value="task_for_box_01" checked>
-<input type="text" name="1" id="1" maxlength="20" value="praca">
+<input type="text" name="1" id="1" maxlength="20" value="write task 1">
 </div></td>
     <!-- Unit_01 Kończy się tutaj-->
     
     <!-- Unit_02 Zaczyna się tutaj-->
     <td width="227"  bgcolor="green"><div class="unit_02">
          <input name="tasks" type="radio" id="task_for_box_02" value="task_for_box_02" >
-        <input type="text" name="2" id="2">
+        <input type="text" name="2" id="2" maxlength="20" value="write task 2">
     </div></td>
        <!-- Unit_02 Kończy się tutaj-->
        
